<resources>
    <string name="app_name">ListView</string>
    <string name="qush">Taom qo`shish</string>
    <string name="save">Saqlash</string>
    <string name="menu">Menu</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="kerakli_mahsulotlar">Kerakli mahsulotlar</string>
    <string name="taom_tayyorlash_tartibi">Taom tayyorlash tartibi</string>
    <string name="text_name">name_foot</string>
    <string name="kerakli_mahsulotlar2">Kerakli mahsulotlar</string>
    <string name="mahsulotlar">mahsulotlar</string>
    <string name="taom_tayyorlanish_tartibi">Taom tayyorlanish tartibi</string>
    <string name="phones">Phones</string>
    <string name="add_phones">Add phones</string>
    <string name="add">Add</string>
</resources>